--- a/checkpoint_html.html
+++ b/checkpoint_html.html
@@ -28,7 +28,7 @@
     <!-- Section About -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Je suis un passionné par le développement logiciel et les systèmes embarqués. Voici une courte vidéo expliquant mon parcours :</p>
+        <p>Je suis Seif Eddine Dafiane, un passionné par le développement logiciel et les systèmes embarqués. Voici une courte vidéo expliquant mon parcours :</p>
         <video controls>
             <source src="C:\Users\Dafiane seif\Downloads\67081395c3e64da2f10794b0.mp4" type="video/mp4">
         </video>
